<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_envelope"
        android:title="@string/title_order"/>



    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_plus"
        android:title="@string/title_post"/>

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_envelope"
        android:title="@string/title_message"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_avatar"
        android:title="@string/title_profile"/>

</menu>
