<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/window_background"
    android:layout_height="match_parent"
    tools:context="com.example.victor.latrans.view.ui.login.LoginActivity">

    <ProgressBar
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.498" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_fileName="preloader.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.498" />


    <!--<com.google.android.gms.common.SignInButton-->
        <!--android:id="@+id/sign_in_button"-->
        <!--android:layout_width="179dp"-->
        <!--android:layout_height="49dp"-->
        <!--android:layout_marginBottom="0dp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.502"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--android:layout_marginRight="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/scrollView2" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/scrollView2"
        android:layout_marginRight="@dimen/padding_normal"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/padding_normal"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_large"
            android:focusableInTouchMode="true"
            android:paddingRight="@dimen/padding_large"
            android:paddingTop="@dimen/logo_padding">

            <!--<ImageView android:src="@drawable/floral"-->
                       <!--android:layout_width="wrap_content"-->
                       <!--android:layout_height="72dp"-->
                       <!--android:layout_marginBottom="24dp"-->
                       <!--android:layout_gravity="center_horizontal" />-->


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                android:layout_marginBottom="@dimen/padding_small"
                android:layout_marginTop="@dimen/padding_small">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <!--  Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:layout_marginTop="@dimen/padding_small"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_normal"
                android:padding="@dimen/padding_normal"
                android:text="@string/login" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/text_create_account"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/link_signup"
                    style="?borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="@dimen/padding_micro"
                    android:background="@null"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:text="@string/create_account"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/link_color_highlight"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </LinearLayout>



        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/tem_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="Logout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Logout"/>


</android.support.constraint.ConstraintLayout>
