<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/window_background"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    tools:context="com.example.victor.latrans.view.ui.signup.SignupActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_fileName="preloader.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.498" />


    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_marginRight="@dimen/padding_normal"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/padding_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/padding_small"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/padding_small">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/logo_padding"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal">

            <!--<ImageView android:src="@drawable/logo"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="72dp"-->
            <!--android:layout_marginBottom="24dp"-->
            <!--android:layout_gravity="center_horizontal" />-->

            <!-- Name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:layout_marginBottom="@dimen/padding_small">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_name"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="textPersonName"
                          android:hint="@string/registration_username" />
            </android.support.design.widget.TextInputLayout>


            <!--  Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                android:layout_marginTop="@dimen/padding_small"
                android:layout_marginBottom="@dimen/padding_small">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_email"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="textEmailAddress"
                          android:hint="@string/registration_email" />
            </android.support.design.widget.TextInputLayout>


            <!--&lt;!&ndash; mobile number &ndash;&gt;-->
            <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginBottom="8dp">-->
            <!--<EditText android:id="@+id/input_mobile"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="number"-->
            <!--android:hint="Mobile Number" />-->
            <!--</android.support.design.widget.TextInputLayout>-->

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="@dimen/padding_small"
                android:layout_marginBottom="@dimen/padding_small">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_password"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="textPassword"
                          android:hint="@string/password_hint"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Signup Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_normal"
                android:layout_marginBottom="@dimen/padding_normal"
                android:padding="@dimen/padding_normal"
                android:text="@string/create_account"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/text_already_member"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/login"
                    style="?borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:paddingLeft="@dimen/padding_micro"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
